// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal component background at small screen size should render properly when it is closed 1`] = `
.c0 {
  display: flex;
  align-items: flex-end;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(67, 84, 101, 0.65);
  z-index: 1000;
  animation: modalFadeOut 0.4s cubic-bezier(0, 0, 0.33, 1);
}

@media (min-width:768px) {
  .c0 {
    align-items: center;
    animation: modalFadeOut 0.2s cubic-bezier(0, 0, 0.33, 1);
  }
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Modal component background at small screen size should render properly when it is open 1`] = `
.c0 {
  display: flex;
  align-items: flex-end;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(67, 84, 101, 0.65);
  z-index: 1000;
  animation: modalFadeIn 0.4s cubic-bezier(0, 0, 0.33, 1);
}

@media (min-width:768px) {
  .c0 {
    align-items: center;
    animation: modalFadeIn 0.2s cubic-bezier(0, 0, 0.33, 1);
  }
}

<div>
  <div
    class="c0"
    open=""
  />
</div>
`;

exports[`Modal component should render properly when it is open 1`] = `
.c7 {
  display: flex;
  z-index: 10;
  padding: 1.6rem 3.2rem 3.2rem;
  box-shadow: 0 -1.8rem 1.6rem -1.6rem rgba(176,188,200,0.6);
  flex-direction: row;
  justify-content: flex-end;
}

.c7>*+* {
  margin-left: 1.6rem;
}

.c2 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: pointer;
  padding: 0.8rem;
  border-radius: 50%;
  background-color: #EBF1FA;
}

.c2 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c3 {
  transform: translate3d(0,0,0);
  perspective: 1000;
  backface-visibility: hidden;
  top: 1.4rem;
  right: 1.4rem;
  z-index: 20;
  position: absolute;
  border-radius: 50%;
  border: none;
  background-color: #ffffff;
}

.c3 * {
  fill: #607890;
}

.c3:hover {
  background-color: #eff2f4;
  box-shadow: 0 2px 8px rgba(239,242,244,0.5);
}

.c3:hover * {
  fill: #607890;
}

.c3:active {
  background-color: #dfe4e9;
  box-shadow: none;
}

.c3:active * {
  fill: #435465;
}

.c6 {
  flex: 1;
  box-sizing: border-box;
  padding: 0.8rem 3.2rem 2.4rem;
}

.c5 {
  box-sizing: border-box;
  background-color: #ffffff;
  width: 100%;
  border-top-left-radius: 1.2rem;
  border-top-right-radius: 1.2rem;
  z-index: 10;
  color: #13181D;
  position: relative;
  padding: 5.6rem 5.6rem 1.6rem 1.6rem;
}

.c0 {
  display: flex;
  align-items: flex-end;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(67, 84, 101, 0.65);
  z-index: 1000;
  animation: modalFadeIn 0.4s cubic-bezier(0, 0, 0.33, 1);
}

.c4 {
  display: flex;
  flex-direction: column;
  flex: 1;
  overflow-y: auto;
  overflow-x: hidden;
}

.c4::-webkit-scrollbar {
  width: 0.5rem;
}

.c4::-webkit-scrollbar-track {
  background-color: transparent;
  margin-top: 0rem;
}

.c4::-webkit-scrollbar-thumb {
  border-radius: 1rem;
  background-color: #b0bcc8;
}

.c1 {
  background: #ffffff;
  display: flex;
  flex-direction: column;
  position: relative;
  min-height: 200px;
  box-shadow: 0 0.4rem 3.2 rgba(67, 84, 101, 0.5);
  box-sizing: border-box;
  border-top-left-radius: 1.2rem;
  border-top-right-radius: 1.2rem;
  overflow: hidden;
}

@media (max-width: 767px) {
  .c7 {
    padding: 1.6rem;
  }
}

@media (min-width: 768px) and (max-height: 700px) {
  .c7 {
    padding: 1.6rem 3.2rem;
  }
}

@media (max-width: 767px) {
  .c6 {
    padding: 0.8rem 1.6rem 2.4rem;
  }
}

@media (min-width: 768px) and (max-height: 700px) {
  .c6 {
    padding-bottom: 0.4rem;
  }
}

@media (min-width:768px) {
  .c6 {
    overflow: auto;
  }

  .c6::-webkit-scrollbar {
    width: 0.5rem;
  }

  .c6::-webkit-scrollbar-track {
    background-color: transparent;
  }

  .c6::-webkit-scrollbar-thumb {
    border-radius: 1rem;
    background-color: #b0bcc8;
  }
}

@media (min-width: 768px) {
  .c5 {
    position: relative;
    padding: 3.2rem 5.6rem 1.6rem 3.2rem;
  }
}

@media (min-width: 768px) and (max-height: 700px) {
  .c5 {
    transition: padding 100ms linear;
    padding: 3.2rem 3.2rem 1.6rem 3.2rem;
  }
}

@media (min-width:768px) {
  .c0 {
    align-items: center;
    animation: modalFadeIn 0.2s cubic-bezier(0, 0, 0.33, 1);
  }
}

@media (min-width: 768px) {
  .c4 {
    overflow: hidden;
  }

  .c4::-webkit-scrollbar-track {
    margin-top: 0;
  }
}

@media (max-width:767px) {
  .c1 {
    width: 100%;
    height: calc(100% - 2.4rem);
    animation: cQwfQi 0.4s cubic-bezier(0,0,0.33,1);
  }
}

@media (min-width: 768px) and (max-width: 1279px) {
  .c1 {
    border-radius: 1.2rem;
    max-width: 72%;
    min-width: 200px;
    max-height: 80%;
  }
}

@media (min-width: 1280px) {
  .c1 {
    border-radius: 1.2rem;
    min-width: 200px;
    max-width: 103.6rem;
    max-height: 80%;
  }
}

@media (max-width:768px) {
  .c1 {
    animation: hvOvm 0.2s cubic-bezier(0,0,0.33,1);
  }
}

<div>
  <div
    class="c0"
    id="medly-modal"
    open=""
  >
    <div
      class="c1"
      id="medly-modal-popup"
      minheight="200px"
      minwidth="200px"
      open=""
    >
      <svg
        class="c2 c3"
        fill="none"
        height="1em"
        id="medly-modal-close-button"
        title="medly-modal-close-icon"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
          fill="#000"
          fill-opacity=".54"
        />
      </svg>
      <div
        class="c4"
        headerheight="0"
        id="medly-modal-inner-container"
      >
        <div
          class="c5"
          id="medly-modal-header"
          scrollstate="[object Object]"
        >
          <p>
            Demo Header
          </p>
        </div>
        <div
          class="c6"
          headerheight="0"
          id="medly-modal-content"
          scrollstate="[object Object]"
        >
          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
        </div>
        <div
          alignitems="right"
          class="c7"
          id="medly-modal-actions"
          scrollstate="[object Object]"
        >
          Demo Actions
        </div>
      </div>
    </div>
  </div>
</div>
`;
